--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Hello , world</h1>
+    <form>
+        <input type="text" name="username"/>
+        <input type="password" name="password"/>
+        <input type="submit" value="Login"/>
+    </form>
 </body>
 </html>
