Add lorem to master.html

--- a/master.html
+++ b/master.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Master</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab omnis fugit natus rem necessitatibus nobis ea veritatis dolorum! Fuga esse magnam ducimus harum neque enim vitae nihil veniam maxime similique.</p>
 </body>
 </html>
