--- a/settings.html
+++ b/settings.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>settings</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus architecto animi voluptate molestias laboriosam fugit? Quibusdam quod voluptates eligendi possimus, nobis consequuntur numquam temporibus, reprehenderit unde rem quam tempora id.</p>
 </body>
 </html>
