Add lorem to contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa optio ut reprehenderit ipsam facere, ipsum debitis maxime sapiente architecto corrupti iure nam quia autem atque qui cupiditate doloribus voluptatum ratione.</p>
 </body>
 </html>
