--- a/B100.html
+++ b/B100.html
@@ -7,6 +7,6 @@
     <title>::B100::</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat assumenda nihil aut iste, voluptatibus, dolores in quos veniam pariatur quo dolorum odit eligendi voluptatem explicabo eaque nemo praesentium cum ducimus.</p>
 </body>
 </html>
