--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
     <title>::About::</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, voluptatibus esse voluptas quidem rem, enim reprehenderit in doloribus dignissimos voluptates atque! Iste voluptatem omnis earum ea delectus atque quas enim.</p>
 </body>
 </html>
