--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>::About::</title>
 </head>
+
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, voluptatibus esse voluptas quidem rem, enim reprehenderit in doloribus dignissimos voluptates atque! Iste voluptatem omnis earum ea delectus atque quas enim.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, voluptatibus esse voluptas quidem rem, enim
+        reprehenderit in doloribus dignissimos voluptates atque! Iste voluptatem omnis earum ea delectus atque quas
+        enim.</p>
+    <h2>Look</h2>
 </body>
+
 </html>
